Opacity visibility fix

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -28,6 +28,7 @@ html, body {
 
 .a1 {
   transition: 0.1s ease;
+  opacity: 0;
 }
 
 #jeeFaceFilterCanvas {
